Wed Dec 27 03:36:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - automake: fixes to HAL automake rules
 - configure.in: more uniform naming of variables

Wed Dec 27 01:37:53 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: improved automatic feature detection; USB, SNMP, HAL,
   SSL features are now built by default if prerequisites are present;
   --with-lib and --with-cgi can be set to "auto".
 - configure.in: fixed HAL autoconf magic to compensate for pkg-config
   bug in HAL 0.5.8*
 - configure.in: allow --without-all to disable most optional features

Fri Dec 22 14:53:33 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/main-hal.ch, drivers/dstate-hal.ch, docs/nut-hal.txt,
   scripts/hal/20-ups-nut-device.fdi: preliminary support for
   FreeDesktop Hardware Abstraction Layer (aka Common Power Management).
   For more information, refer to: docs/nut-hal.txt

Wed Dec 20 08:31:33 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - driver.list: update for CyberPower 725SL and genericups

Tue Dec 19 02:50:51 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: fixed bug with lowbatt and no charge calculation

Mon Dec 18 17:29:53 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: renamed '-x generic' option as '-x explore'

Thu Dec 14 19:16:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: added two model numbers for the "belkin" driver. 

Thu Dec 14 19:00:30 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - bcmxcp.c: fixed "&&" vs. "&" issue (bug 304249, reported by Arjen de Korte).

Wed Dec 13 01:40:11 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - driver.list: models supported by megatec and another driver are now
   listed as supported by megatec only
 - mustek, blazer, fentonups, esupssmart, sms, ippon: added message about
   the driver being obsolete and planned for removal