@@ -1,4 +1,4 @@
-dnl +------------------------------------------------------------------+
+hdnl +------------------------------------------------------------------+
 dnl | Network UPS Tools: configure.in                                  |
 dnl +------------------------------------------------------------------+
 
@@ -23,9 +23,14 @@ dnl | default values for things later on (can be overridden)           |
 
 STATEPATH="/var/state/ups"
 
-DRVPATH='${exec_prefix}/bin'
-CGIPATH='${exec_prefix}/cgi-bin'
-HTMLPATH='${prefix}/html'
+cgiexecdir='${exec_prefix}/cgi-bin'
+driverexecdir='${exec_prefix}/bin'
+htmldir='${prefix}/html'
+if test -d /usr/lib/pkgconfig; then
+   pkgcfgdir='/usr/lib/pkgconfig'
+else
+   pkgcfgdir=''
+fi
 
 RUN_AS_USER="nobody"
 PIDPATH="/var/run"
@@ -677,7 +682,7 @@ AC_HELP_STRING([--with-drvpath=PATH], [where to install ups drivers (EPREFIX/bin
 [	case "${withval}" in
 	yes|no)
 		AC_MSG_RESULT(using default)
-		conftemp="${DRVPATH}"
+		conftemp="${driverexecdir}"
 		eval conftemp=\"${conftemp}\"
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(DRVPATH, "${conftemp}",
@@ -690,11 +695,11 @@ AC_HELP_STRING([--with-drvpath=PATH], [where to install ups drivers (EPREFIX/bin
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(DRVPATH, "${conftemp}",
 			[Default path for UPS drivers])
-		DRVPATH="${withval}"
+		driverexecdir="${withval}"
 		;;
 	esac],
 	AC_MSG_RESULT(using default)
-	conftemp="${DRVPATH}"
+	conftemp="${driverexecdir}"
 	eval conftemp=\"${conftemp}\"
 	eval conftemp=\"${conftemp}\"
 	AC_DEFINE_UNQUOTED(DRVPATH, "${conftemp}",
@@ -707,7 +712,7 @@ AC_HELP_STRING([--with-cgipath=PATH], [where to install CGI programs (EPREFIX/cg
 [	case "${withval}" in
 	yes|no)
 		AC_MSG_RESULT(using default)
-		conftemp="${CGIPATH}"
+		conftemp="${cgiexecdir}"
 		eval conftemp=\"${conftemp}\"
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(CGIPATH, "${conftemp}",
@@ -720,11 +725,11 @@ AC_HELP_STRING([--with-cgipath=PATH], [where to install CGI programs (EPREFIX/cg
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(CGIPATH, "${conftemp}",
 			[Default path for CGI programs])
-		CGIPATH="${withval}"
+		cgiexecdir="${withval}"
 		;;
 	esac],
 	AC_MSG_RESULT(using default)
-	conftemp="${CGIPATH}"
+	conftemp="${cgiexecdir}"
 	eval conftemp=\"${conftemp}\"
 	eval conftemp=\"${conftemp}\"
 	AC_DEFINE_UNQUOTED(CGIPATH, "${conftemp}",
@@ -737,7 +742,7 @@ AC_HELP_STRING([--with-htmlpath=PATH], [where to install HTML files (PREFIX/html
 [	case "${withval}" in
 	yes|no)
 		AC_MSG_RESULT(using default)
-		conftemp="${HTMLPATH}"
+		conftemp="${htmldir}"
 		eval conftemp=\"${conftemp}\"
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(HTMLPATH, "${conftemp}",
@@ -750,11 +755,11 @@ AC_HELP_STRING([--with-htmlpath=PATH], [where to install HTML files (PREFIX/html
 		eval conftemp=\"${conftemp}\"
 		AC_DEFINE_UNQUOTED(HTMLPATH, "${conftemp}",
 			[Default path for HTML files])
-		HTMLPATH="${withval}"
+		htmldir="${withval}"
 		;;
 	esac],
 	AC_MSG_RESULT(using default)
-	conftemp="${HTMLPATH}"
+	conftemp="${htmldir}"
 	eval conftemp=\"${conftemp}\"
 	eval conftemp=\"${conftemp}\"
 	AC_DEFINE_UNQUOTED(HTMLPATH, "${conftemp}",
@@ -896,39 +901,26 @@ AC_ARG_ENABLE(strip,
 
 AC_MSG_CHECKING(whether to enable pkg-config support)
 AC_ARG_WITH(pkgconfig-dir,
-AC_HELP_STRING([--with-pkgconfig-dir=PATH], [where to install pkg-config *.pc files (/usr/lib/pkgconfig)]),
-[
+ AC_HELP_STRING([--with-pkgconfig-dir=PATH], [where to install pkg-config *.pc files (/usr/lib/pkgconfig)]),
+ [
 	case "${withval}" in
 		yes)
-			if (test -d '/usr/lib/pkgconfig')
-			then
-				PKG_CFG_DIR='/usr/lib/pkgconfig'
-			else
-				PKG_CFG_DIR=""
-			fi
 		;;
 		no)
-			PKG_CFG_DIR=""
+			pkgcfgdir=""
 		;;
 		*)
-			PKG_CFG_DIR="${withval}"
+			pkgcfgdir="${withval}"
 		;;
 	esac
-],
-[       
-	if (test -d '/usr/lib/pkgconfig')
-	then
-		PKG_CFG_DIR='/usr/lib/pkgconfig'
-	else
-		PKG_CFG_DIR=""
-	fi
-])
-if test -n "${PKG_CFG_DIR}"; then
-  AC_MSG_RESULT(using ${PKG_CFG_DIR})
+ ],
+ )
+if test -n "${pkgcfgdir}"; then
+  AC_MSG_RESULT(using ${pkgcfgdir})
 else
   AC_MSG_RESULT(no)
 fi
-AM_CONDITIONAL(WITH_PKG_CONFIG, test -n ${PKG_CFG_DIR})
+AM_CONDITIONAL(WITH_PKG_CONFIG, test -n ${pkgcfgdir})
 
 dnl 'long long' check - this gets used down in snprintf.o
 dnl
@@ -970,14 +962,14 @@ AC_SUBST(DRIVER_INSTALL_TARGET)
 AC_SUBST(NETLIBS)
 AC_SUBST(SERLIBS)
 AC_SUBST(STATEPATH)
-AC_SUBST(DRVPATH)
-AC_SUBST(CGIPATH)
-AC_SUBST(HTMLPATH)
 AC_SUBST(RUN_AS_USER)
 AC_SUBST(LINUX_HIDDEV)
 AC_SUBST(SUN_LIBUSB)
 AC_SUBST(WORDS_BIGENDIAN)
-AC_SUBST(PKG_CFG_DIR)
+AC_SUBST(cgiexecdir)
+AC_SUBST(driverexecdir)
+AC_SUBST(htmldir)
+AC_SUBST(pkgcfgdir)
 
 AC_OUTPUT([
  clients/Makefile
