@@ -1,6 +1,4 @@
 # Network UPS Tools: data/html                                                  
-htmldir = @HTMLPATH@
-
 # install these only if configured --with-cgi
 if WITH_CGI
  dist_html_DATA = index.html bottom.html nut-banner.png
