@@ -1,7 +1,5 @@
 # Network UPS Tools: lib
 
-pkgcfgdir = @PKG_CFG_DIR@
-
 if WITH_LIB
 if WITH_PKG_CONFIG
  pkgcfg_DATA = libupsclient.pc
